--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   shared_preferences: ^2.0.5
   http: ^0.13.3
   provider: ^4.1.0
-
+  file_picker: ^3.0.1
+  dio: ^4.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
