--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.1.0
   file_picker: ^3.0.1
   dio: ^4.0.0
+  bottom_navy_bar: ^5.6.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
