--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,9 @@ dependencies:
   bottom_navy_bar: ^5.6.0
   loadmore: ^2.0.1
   timelines: ^0.1.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   circular_profile_avatar: ^1.0.8
+  device_info: ^2.0.1
 
 dev_dependencies:
   flutter_test:
