--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   circular_profile_avatar: ^1.0.8
   device_info: ^2.0.1
+  firebase_core: ^1.2.0
+  firebase_messaging: ^10.0.0
 
 dev_dependencies:
   flutter_test:
