--wip-- [skip ci]

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="it_delivery" android:icon="@mipmap/ic_launcher">
+	<application android:label="it_delivery" android:icon="@mipmap/ic_launcher"
+	android:usesCleartextTraffic="true" >
+
+	
 		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAHd7P_gxVphSrp8V90F-Utu1joEo1YC3M"/>
 		<activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
 			<!--
