--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,24 +24,25 @@ dependencies:
   flutter:
     sdk: flutter
   calendar_strip: ^1.0.6
-  google_maps_flutter: ^2.0.3
-  geolocator: ^7.0.3
-  shared_preferences: ^2.0.5
+  google_maps_flutter: ^2.0.6
+  geolocator: ^7.2.0+1
+  shared_preferences: ^2.0.6
   http: ^0.13.3
-  provider: ^4.1.0
-  file_picker: ^3.0.1
-  dio: ^4.0.0
-  bottom_navy_bar: ^5.6.0
-  loadmore: ^2.0.1
+  provider: ^5.0.0
+  file_picker: ^3.0.3
+  # dio: ^4.0.0
+  bottom_navy_bar: ^6.0.0
+  loadmore: ^2.0.1  #to be removed
   timelines: ^0.1.0
-  cupertino_icons: ^1.0.2
-  circular_profile_avatar: ^1.0.8
-  device_info: ^2.0.1
-  firebase_core: ^1.2.0
-  firebase_messaging: ^10.0.0
+  cupertino_icons: ^1.0.3
+  circular_profile_avatar: ^2.0.0
+  device_info: ^2.0.2
+  firebase_core: ^1.3.0
+  firebase_messaging: ^10.0.2
   progress_state_button: ^1.0.3
   flutter_localizations:
     sdk: flutter
+  infinite_scroll_pagination: ^3.0.1+1
 
     
 dev_dependencies:
