--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<application android:label="it_delivery" android:icon="@mipmap/ic_launcher"
+	<application android:label="it_delivery" android:icon="@mipmap/launcher_icon"
 	android:usesCleartextTraffic="true" >
 
 	
