--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,14 @@ dependencies:
 
     
 dev_dependencies:
+  flutter_launcher_icons: "^0.8.0"
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "asset/images/logo.png"
+
   flutter_test:
     sdk: flutter
 
